# ai-voice-agent-platform

./: .env.example  .gitignore  package-lock.json  package.json  turbo.json
services/ai-runtime/: pyproject.toml
services/ai-runtime/src/: config.py  main.py
services/ai-runtime/src/api/: chat.py  health.py  live_voice.py  rag.py  router.py  tools.py  voice.py  web_call.py  widget.py
services/ai-runtime/src/integrations/: calcom.py
services/ai-runtime/src/llm/: anthropic_provider.py  base.py  gemini_provider.py  mock_provider.py  openai_provider.py  router.py
services/ai-runtime/src/models/: __init__.py
services/ai-runtime/src/prompts/: __init__.py  voice_agent.py
services/ai-runtime/src/providers/: speech.py
services/ai-runtime/src/rag/: context_builder.py  pipeline.py  retriever.py
services/ai-runtime/src/tools/: executor.py  registry.py
services/ai-runtime/src/tools/builtin/: __init__.py  calendar_booking.py  crm_lookup.py  send_sms.py  transfer_call.py
services/analytics-service/: pyproject.toml
services/analytics-service/src/: config.py  consumer.py  main.py
services/analytics-service/src/aggregators/: agent_aggregator.py  call_aggregator.py  lead_aggregator.py
services/analytics-service/src/api/: dashboard.py  metrics.py  router.py
services/analytics-service/src/db/: init.py
services/analytics-service/src/models/: __init__.py
services/voice-service/: pyproject.toml
services/voice-service/src/: config.py  main.py
services/voice-service/src/api/: health.py  router.py  stream.py  synthesize.py  transcribe.py  ws_audio.py
services/voice-service/src/models/: __init__.py
services/voice-service/src/pipeline/: audio_buffer.py  interruption_handler.py  twilio_pipeline.py  vad.py  voice_pipeline.py
services/voice-service/src/stt/: base.py  deepgram_provider.py  whisper_provider.py
services/voice-service/src/tts/: base.py  elevenlabs_provider.py
(+466 files in other folders)
