[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-runtime"
version = "0.1.0"
description = "AI Runtime service - LLM orchestration, tool calling, and RAG"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "google-generativeai>=0.5.0",
    "asyncpg>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sse-starlette>=2.1.0",
    "httpx>=0.27.0",
    "va-common",
]

[tool.setuptools.packages.find]
where = ["src"]
