[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voice-service"
version = "0.1.0"
description = "Voice service - STT, TTS, and real-time audio streaming"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "deepgram-sdk>=3.2.0",
    "elevenlabs>=1.1.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "va-common",
]

[tool.setuptools.packages.find]
where = ["src"]
